syntax = "proto3";
package online.polp.schedule_service;

import "google/protobuf/timestamp.proto";

service ScheduleService {
  // Ping the service to check if it is alive
  rpc Ping (PingRequest) returns (PingReply);
  // Subscribe to the subscriber count stream
  rpc SubscriberCount (SubscriberCountRequest) returns (stream SubscriberCountStreamUpdate);
  // Get all events
  rpc Events (EventsRequest) returns (stream EventsResponse);
  // Subscribe to events (deletes all previous subscriptions)
  rpc SubscribeToEvents (EventSubscriptionRequest) returns (EventSubscriptionResponse);
  // Join an event (set the joined_at field to the current time)
  rpc JoinEvent (EventJoinRequest) returns (EventJoinResponse);
  // Leave an event (set the left_at field to the current time)
  rpc LeaveEvent (EventLeaveRequest) returns (EventLeaveResponse);
  // Get all users that joined an event for a given round, with the joined_at and left_at fields,
  // along with all the user's info
  rpc EventUsersStatus (EventUsersStatusRequest) returns (stream EventUsersStatusResponse);
}

message PingRequest {}

message PingReply {
  string message = 1;
}

message SubscriberCountRequest {}

message SubscriberCountStreamUpdate {
  int32 id = 1;
  uint64 subscriberCount = 2;
}

message EventsRequest {}

message EventsResponse {
  int32 id = 1;
  string name = 2;
  string room = 3;
  string zone = 4;
  string floor = 5;
  int32 minimumSection = 6;
}

message EventSubscriptionRequest {
  int32 user_id = 1;
  repeated int32 event_ids = 2;
}

message EventSubscriptionResponse {}

message EventJoinRequest {
  int32 user_id = 1;
  int32 event_id = 2;
}

message EventJoinResponse {}

message EventLeaveRequest {
  int32 user_id = 1;
  int32 event_id = 2;
}

message EventLeaveResponse {}

message EventUsersStatusRequest {
  int32 event_id = 1;
  int32 round = 2;
}

message UserInfoStatus {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 section = 4;
  string class = 5;
}

message EventUsersStatusResponse {
  int32 id = 1;
  optional string name = 2;
  string email = 3;
  int32 section = 4;
  optional string class = 5;
  optional google.protobuf.Timestamp joined_at = 6;
  optional google.protobuf.Timestamp left_at = 7;
}

